
  Developed by Monocasual Laboratories

  www.giadamusic.com

  CHANGELOG
--------------------------------------------------------------------------------


0.14.3 --- 
- [Sample Editor] New "reverse selection" function
- [Sample Editor] New "normalize hard" function
- [Sample Editor] Double click selects all
- [Sample Editor] Fix garbled characters in window's title
- Resizable channels
- Remove calls to malloc/free in Mixer (use new/delete instead)
- Fix infinite loop for one shot retrig samples with quantizer > 0
- Fix wrong geChannel count while saving a patch
- Fix missing greyed-out options in Sample Channel's menu when loading a wrong
  sample


0.14.2 --- 2017 . 08 . 14
- [Sample Editor] Audible preview (with optional loop mode)
- [Sample Editor] Frame-precise editing
- [Sample Editor] Show sample's information
- [Sample Editor] Improved fade out algorithm
- [Sample Editor] Process both left and right channel's data while drawing
- Better Wave objects handling
- Improved channels' memory management
- Improved empty columns cleanup algorithm
- Update Catch version
- Update JUCE version (5.1.1)
- Update Jansson version (2.10)
- Fix missing tempo update on reset to init state
- Fix wrong memory allocation for UI-less plugins


0.14.1 --- 2017 . 07 . 16
- Update JUCE library to 5.0.2
- Show play head in Sample Editor
- Refactor pop up menu in Sample Editor
- Many small fixes and optimizations in waveform drawing routine
- Makefile cleanup
- Fix crash while recording with beats/bars greater than 4/1 (GitHub #134)


0.14.0 --- 2017 . 05 . 29
- Sample Editor reorganized and refactored 
- Removed support for old ini-based patch files
- Improved and simplified pan algorithm
- Ability to toggle input monitoring while recording audio
- Lots of code refactoring
- Convert all .h headers to C++ headers
- Update Libsndfile to version 1.0.28
- Fix crash when recording audio
- Fix wrong file path when exporting samples