@@ -17,6 +17,7 @@
 - [Sample Editor] New "normalize hard" function
 - [Sample Editor] Double click selects all
 - [Sample Editor] Fix garbled characters in window's title
+- [Sample Editor] Fix wrong result on "set pitch to song/bar"
 - Resizable channels
 - Remove calls to malloc/free in Mixer (use new/delete instead)
 - Fix infinite loop for one shot retrig samples with quantizer > 0
